force-app/main/default/objects/OCX_Feature_Definition__c/OCX_Feature_Definition__c.object-meta.xml
<CustomObject>
    <description>Generalized Direct Experience, Profile, or Cohort-derived feature definition.</description>
    <label>Feature Definition</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>