force-app/main/default/objects/OCX_Feature_Definition__c/fields/Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>Availability_Status__c</fullName>
    <label>Availability Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>