force-app/main/default/objects/OCX_Feature_Definition__c/fields/Bucketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Bucketing_Strategy__c</fullName>
    <label>Bucketing Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>