force-app/main/default/objects/OCX_Feature_Definition__c/fields/Cardinality_Suitability_Score__c.field-meta.xml
<CustomField>
    <fullName>Cardinality_Suitability_Score__c</fullName>
    <label>Cardinality Suitability Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>