force-app/main/default/objects/OCX_Feature_Definition__c/fields/Cohort_Suitable__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Suitable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cohort Suitable</label>
    <type>Checkbox</type>
</CustomField>