force-app/main/default/objects/OCX_Feature_Definition__c/fields/Correlation__c.field-meta.xml
<CustomField>
    <fullName>Correlation__c</fullName>
    <label>Correlation</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>