force-app/main/default/objects/OCX_Feature_Definition__c/fields/Data_Coverage_Pct__c.field-meta.xml
<CustomField>
    <fullName>Data_Coverage_Pct__c</fullName>
    <label>Data Coverage Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>