force-app/main/default/objects/OCX_Feature_Definition__c/fields/Driver_Key__c.field-meta.xml
<CustomField>
    <fullName>Driver_Key__c</fullName>
    <label>Driver Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>