force-app/main/default/objects/OCX_Feature_Definition__c/fields/Empirical_Predictive_Score__c.field-meta.xml
<CustomField>
    <fullName>Empirical_Predictive_Score__c</fullName>
    <label>Empirical Predictive Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>