force-app/main/default/objects/OCX_Feature_Definition__c/fields/Empirical_Status__c.field-meta.xml
<CustomField>
    <fullName>Empirical_Status__c</fullName>
    <label>Empirical Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>