force-app/main/default/objects/OCX_Feature_Definition__c/fields/Explainability_Score__c.field-meta.xml
<CustomField>
    <fullName>Explainability_Score__c</fullName>
    <label>Explainability Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>