force-app/main/default/objects/OCX_Feature_Definition__c/fields/Feature_Class__c.field-meta.xml
<CustomField>
    <fullName>Feature_Class__c</fullName>
    <label>Feature Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>