force-app/main/default/objects/OCX_Feature_Definition__c/fields/Feature_Key__c.field-meta.xml
<CustomField>
    <fullName>Feature_Key__c</fullName>
    <externalId>true</externalId>
    <label>Feature Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>