force-app/main/default/objects/OCX_Feature_Definition__c/fields/Feature_Type__c.field-meta.xml
<CustomField>
    <fullName>Feature_Type__c</fullName>
    <label>Feature Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>