force-app/main/default/objects/OCX_Feature_Definition__c/fields/Formula_Expression__c.field-meta.xml
<CustomField>
    <fullName>Formula_Expression__c</fullName>
    <label>Formula Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>