force-app/main/default/objects/OCX_Feature_Definition__c/fields/Generated_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Generated_Rationale__c</fullName>
    <label>Generated Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>