force-app/main/default/objects/OCX_Feature_Definition__c/fields/Grain__c.field-meta.xml
<CustomField>
    <fullName>Grain__c</fullName>
    <label>Grain</label>
    <length>80</length>
    <type>Text</type>
</CustomField>