force-app/main/default/objects/OCX_Feature_Definition__c/fields/Human_Notes__c.field-meta.xml
<CustomField>
    <fullName>Human_Notes__c</fullName>
    <label>Human Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>