force-app/main/default/objects/OCX_Feature_Definition__c/fields/Human_Status__c.field-meta.xml
<CustomField>
    <fullName>Human_Status__c</fullName>
    <label>Human Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>