force-app/main/default/objects/OCX_Feature_Definition__c/fields/Leakage_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Leakage_Risk_Score__c</fullName>
    <label>Leakage Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>