force-app/main/default/objects/OCX_Feature_Definition__c/fields/Measurement_Concept__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Concept__c</fullName>
    <label>Measurement Concept</label>
    <length>120</length>
    <type>Text</type>
</CustomField>