force-app/main/default/objects/OCX_Feature_Definition__c/fields/Metric_Archetype__c.field-meta.xml
<CustomField>
    <fullName>Metric_Archetype__c</fullName>
    <label>Metric Archetype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>