force-app/main/default/objects/OCX_Feature_Definition__c/fields/Minimum_Cohort_Size__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Cohort_Size__c</fullName>
    <label>Minimum Cohort Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>