force-app/main/default/objects/OCX_Feature_Definition__c/fields/Model_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Model_Contribution__c</fullName>
    <label>Model Contribution</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>