force-app/main/default/objects/OCX_Feature_Definition__c/fields/Mutual_Information__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Information__c</fullName>
    <label>Mutual Information</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>