force-app/main/default/objects/OCX_Feature_Definition__c/fields/OCX_Run__c.field-meta.xml
<CustomField>
    <fullName>OCX_Run__c</fullName>
    <label>Source Intelligence Run</label>
    <referenceTo>OCX_Source_Intelligence_Run__c</referenceTo>
    <relationshipLabel>Feature Definitions</relationshipLabel>
    <relationshipName>Feature_Definitions</relationshipName>
    <type>MasterDetail</type>
</CustomField>