force-app/main/default/objects/OCX_Feature_Definition__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Feature Origin</label>
    <length>80</length>
    <type>Text</type>
</CustomField>