force-app/main/default/objects/OCX_Feature_Definition__c/fields/Peer_Group_Utility_Score__c.field-meta.xml
<CustomField>
    <fullName>Peer_Group_Utility_Score__c</fullName>
    <label>Peer Group Utility Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>