force-app/main/default/objects/OCX_Feature_Definition__c/fields/Primary_Theme__c.field-meta.xml
<CustomField>
    <fullName>Primary_Theme__c</fullName>
    <label>Primary Theme</label>
    <length>80</length>
    <type>Text</type>
</CustomField>