force-app/main/default/objects/OCX_Feature_Definition__c/fields/Secondary_Themes__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Themes__c</fullName>
    <label>Secondary Themes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>