force-app/main/default/objects/OCX_Feature_Definition__c/fields/Stability_Score__c.field-meta.xml
<CustomField>
    <fullName>Stability_Score__c</fullName>
    <label>Stability Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>