force-app/main/default/objects/OCX_Feature_Definition__c/fields/Stage_Key__c.field-meta.xml
<CustomField>
    <fullName>Stage_Key__c</fullName>
    <label>Stage Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>