force-app/main/default/objects/OCX_Feature_Definition__c/fields/Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Window_Days__c</fullName>
    <label>Window Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>